Update index.html to include example activity card structure in comments

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -18,6 +18,18 @@
         <div id="activities-list">
           <!-- Activities will be loaded here -->
           <p>Loading activities...</p>
+          <!-- Example activity card structure for reference:
+          <div class="activity-card">
+            <h4>Activity Name</h4>
+            <p>Activity Description</p>
+            <div class="participants-section">
+              <strong>Participants:</strong>
+              <ul class="participants-list">
+                <!-- List items for participants go here -->
+              </ul>
+            </div>
+          </div>
+          -->
         </div>
       </section>
 
